--- a/.github/workflows/open-ai-app.yml
+++ b/.github/workflows/open-ai-app.yml
@@ -77,23 +77,32 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Fetch App Name
+        id: name-fetcher
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            name=$(az webapp list --query "[?starts_with(name, '${{ secrets.AZURE_APP_SERVICE_NAME }}')].name" --output tsv)
+            echo "APP_NAME=$name" >> "$GITHUB_OUTPUT"
+
       # Set the build during deployment setting to false. This setting was added in the templates to all azd to work, but breaks deployment via webapps-deploy
       - name: Azure CLI script
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            rg=$(az webapp list --query "[?starts_with(name, '${{ secrets.AZURE_APP_SERVICE_NAME }}')].resourceGroup" --output tsv)
-            echo Setting SCM_DO_BUILD_DURING_DEPLOYMENT=false on app service ${{ secrets.AZURE_APP_SERVICE_NAME }}
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings SCM_DO_BUILD_DURING_DEPLOYMENT=false -o none
-            echo Setting --startup-file=\"node server.js\" on app service ${{ secrets.AZURE_APP_SERVICE_NAME }}
-            az webapp config set --startup-file="node server.js" -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg -o none
+            name=${{ steps.name-fetcher.outputs.APP_NAME }}
+            rg=$(az webapp list --query "[?name=='$name'].resourceGroup" --output tsv)
+            echo Setting SCM_DO_BUILD_DURING_DEPLOYMENT=false on app service $name
+            az webapp config appsettings set -n $name -g $rg --settings SCM_DO_BUILD_DURING_DEPLOYMENT=false -o none
+            echo Setting --startup-file=\"node server.js\" on app service $name
+            az webapp config set --startup-file="node server.js" -n $name -g $rg -o none
             sleep 10
 
       - name: 🚀 Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ secrets.AZURE_APP_SERVICE_NAME }}
+          app-name: ${{ steps.name-fetcher.outputs.APP_NAME }}
           package: ${{ github.workspace }}/Nextjs-site.zip
 
       - name: 🧹 Cleanup
